--- a/doc/acceptance/backend/Backend.suite.yml
+++ b/doc/acceptance/backend/Backend.suite.yml
@@ -2,7 +2,7 @@ class_name: BackendTester
 modules:
   enabled:
     - WebDriver:
-        url: http://web:8000/typo3temp/var/tests/acceptance
+        url: http://web
         browser: chrome
         wait: 1
         host: chrome
