[TASK] Add TYPO3 test dependencies, normalize composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,28 @@
 {
 	"name": "de-swebhosting/typo3-extension-buildtools",
-	"type": "library",
 	"description": "Contains scripts to test and release TYPO3 Extensions",
 	"license": "GPL-3.0-or-later",
-	"bin": [
-		"bin/t3_check_codestyle.sh",
-		"bin/t3_deploy_to_ter.sh",
-		"bin/t3_prepare_release.sh",
-		"bin/t3_run_tests.sh"
-	],
+	"type": "library",
 	"require": {
+		"php": "^8.2",
+		"bnf/phpstan-psr-container": "^1.0",
+		"codeception/codeception": "^5.1.1",
 		"codeception/module-asserts": "^3.0.0",
 		"codeception/module-webdriver": "^4.0.1",
-		"codeception/codeception": "^5.1.1",
+		"de-swebhosting/php-codestyle": "^5.2",
+		"ergebnis/composer-normalize": "^2.42",
+		"friendsofphp/php-cs-fixer": "^3.54",
+		"friendsoftypo3/phpstan-typo3": "^0.9.0",
+		"michielroos/typo3scan": "^1.7",
+		"phpstan/phpstan": "^1.10",
+		"phpstan/phpstan-phpunit": "^1.3",
 		"phpunit/phpunit": "^11.0.3",
+		"squizlabs/php_codesniffer": "^3.9",
+		"symfony/dom-crawler": "^6.3",
 		"typo3/testing-framework": "dev-main"
+	},
+	"require-dev": {
+		"composer/composer": "^2.5"
 	},
 	"suggest": {
 		"de-swebhosting/php-codestyle": "Required to run t3_check_codestyle.sh",
@@ -25,11 +33,15 @@
 			"De\\SWebhosting\\Buildtools\\": "src/"
 		}
 	},
-	"require-dev": {
-		"composer/composer": "^2.5"
-	},
+	"bin": [
+		"bin/t3_check_codestyle.sh",
+		"bin/t3_deploy_to_ter.sh",
+		"bin/t3_prepare_release.sh",
+		"bin/t3_run_tests.sh"
+	],
 	"config": {
 		"allow-plugins": {
+			"ergebnis/composer-normalize": true,
 			"typo3/class-alias-loader": true,
 			"typo3/cms-composer-installers": true
 		}
