--- a/composer.json
+++ b/composer.json
@@ -5,21 +5,21 @@
 	"type": "library",
 	"require": {
 		"php": "^8.2",
-		"bnf/phpstan-psr-container": "^1.0",
-		"codeception/codeception": "^5.1.1",
+		"bnf/phpstan-psr-container": "^1.0.1",
+		"codeception/codeception": "^5.1.2",
 		"codeception/module-asserts": "^3.0.0",
-		"codeception/module-webdriver": "^4.0.1",
-		"de-swebhosting/php-codestyle": "^5.2",
+		"codeception/module-webdriver": "^4.0.2",
+		"de-swebhosting/php-codestyle": "^5.1.2",
 		"ergebnis/composer-normalize": "^2.42",
-		"friendsofphp/php-cs-fixer": "^3.54",
+		"friendsofphp/php-cs-fixer": "^3.64.0",
 		"friendsoftypo3/phpstan-typo3": "^0.9.0",
 		"michielroos/typo3scan": "^1.7",
-		"phpstan/phpstan": "^1.10",
-		"phpstan/phpstan-phpunit": "^1.3",
-		"phpunit/phpunit": "^11.0.3",
+		"phpstan/phpstan": "^1.12.6",
+		"phpstan/phpstan-phpunit": "^1.4.0",
+		"phpunit/phpunit": "^11.3.1",
 		"squizlabs/php_codesniffer": "^3.9",
 		"symfony/dom-crawler": "^6.3",
-		"typo3/testing-framework": "dev-main"
+		"typo3/testing-framework": "^9.0.0"
 	},
 	"require-dev": {
 		"composer/composer": "^2.5"
