--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,13 @@
 		"phpunit/phpunit": "^11.3.1",
 		"squizlabs/php_codesniffer": "^3.9",
 		"symfony/dom-crawler": "^6.3",
+		"typo3/cms-backend": "^13.4",
+		"typo3/cms-core": "^13.4",
+		"typo3/cms-extbase": "^13.4",
+		"typo3/cms-filelist": "^13.4",
+		"typo3/cms-fluid": "^13.4",
+		"typo3/cms-frontend": "^13.4",
+		"typo3/cms-install": "^13.4",
 		"typo3/testing-framework": "^9.0.0"
 	},
 	"require-dev": {
